--- a/index.html
+++ b/index.html
@@ -299,72 +299,52 @@
 
 	Contact
 	</h1>
-	<form  class="needs-validation" novalidate>
-	  <div class="form-row">
-		<div class="col-md-4 mb-3">
-		  <label for="validationCustom01">First name</label>
-		  <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Towhid" required>
-		  <div class="valid-feedback">
-			Looks good!
-		  </div>
-		</div>
-		<div id="Form" class="col-md-4 mb-3">
-		  <label for="validationCustom02">Last name</label>
-		  <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="islam" required>
-		  <div class="valid-feedback">
-			Looks good!
-		  </div>
-		</div>
-		<div class="col-md-4 mb-3">
-		  <label for="validationCustomUsername"> Gmail </label>
-		  <div class="input-group">
-			<div class="input-group-prepend">
-			  <span class="input-group-text" id="inputGroupPrepend">@</span>
-			</div>
-			<input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
-			<div class="invalid-feedback">
-			  Please choose a username.
-			</div>
-		  </div>
-		</div>
-	  </div>
-	  <div class="form-row">
-		<div class="col-md-6 mb-3">
-		  <label for="validationCustom03">City</label>
-		  <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
-		  <div class="invalid-feedback">
-			Please provide a valid city.
-		  </div>
-		</div>
-		<div class="col-md-3 mb-3">
-		  <label for="validationCustom04">State</label>
-		  <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-		  <div class="invalid-feedback">
-			Please provide a valid state.
-		  </div>
-		</div>
-		<div class="col-md-3 mb-3">
-		  <label for="validationCustom05">Zip</label>
-		  <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-		  <div class="invalid-feedback">
-			Please provide a valid zip.
-		  </div>
-		</div>
-	  </div>
-	  <div class="form-group">
-		<div class="form-check">
-		  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-		  <label class="form-check-label" for="invalidCheck">
-			Agree to terms and conditions
-		  </label>
-		  <div class="invalid-feedback">
-			You must agree before submitting.
-		  </div>
-		</div>
-	  </div>
-	  <button class="btn btn-primary" type="submit">Submit form</button>
-	</form>
-
+	<form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="email" class="form-control" id="inputEmail4">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">Password</label>
+      <input type="password" class="form-control" id="inputPassword4">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputAddress">Address</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <div class="form-group">
+    <label for="inputAddress2">Address 2</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState">State</label>
+      <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip">Zip</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
 	<script>
 	// Example starter JavaScript for disabling form submissions if there are invalid fields
 	(function() {
